# draw-party-game

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  deploy.sh  index.html  manifest.json  package.json  sw.js
.claude/: settings.local.json
.cursor/rules/: draw-party.mdc
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/e2e/: device-compat.e2e.ts  full-round.e2e.ts  playwright.config.ts  polish.e2e.ts  pwa-cache.e2e.ts
client/public/: manifest.webmanifest  sw.js
client/src/: dom.ts  drawing.test.ts  drawing.ts  main.ts  net.ts  polish.test.ts  polish.ts  protocol.test.ts  protocol.ts  sound.ts  store.test.ts  store.ts  style.css  time.test.ts  time.ts
server/: Cargo.toml
server/src/: engine.rs  main.rs  protocol.rs
