[package]
name = "draw-party-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
